# jex-farm

./: .gitignore  Cargo.toml  README.md  reproducible_build.sh
interaction/: _common.snippets.sh  devnet-template.snippets.sh  devnet.snippets.sh  erdpy.data-storage.json  mainnet-template.snippets.sh  mxpy.data-storage.json
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: claim_nominal_1.scen.json  claim_nominal_2.scen.json  e2e.scen.json  exit_nominal_1.scen.json  extend_farm.scen.json  fund.scen.json  fund_invalid_balance.scen.json  fund_not_owner.scen.json  fund_wrong_token.scen.json  get_pending_rewards_1.scen.json  get_pending_rewards_1_after_farm_extended.scen.json  get_pending_rewards_1_farm_ended.scen.json  get_pending_rewards_2.scen.json  init.scen.json  scenario  set_rewards_duration_nominal.scen.json  set_rewards_duration_period_not_complete.scen.json  set_rewards_duration_period_not_owner.scen.json  stake_nominal.scen.json  stake_nominal_1.scen.json  stake_nominal_2.scen.json  stake_not_started.scen.json  stake_wrong_token.scen.json  terminate_nominal.scen.json  terminate_not_owner.scen.json  withdraw_invalid_amount.scen.json  withdraw_nominal_1.scen.json  withdraw_partial_1.scen.json
scenarios/steps/: deploy_contract.steps.json
src/: lib.rs
tests/: rust_test.rs  scenario_go_test.rs  scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
