[package]
name = "jex-sc-farm"
version = "0.0.0"
authors = ["Aurélien Passion <aurelien.passion@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.6"

[dependencies.multiversx-sc]
version = "0.54.6"
